[gd_scene load_steps=6 format=2]

[ext_resource path="res://Objects/Enemies/ENE_DemonHand.gd" type="Script" id=1]
[ext_resource path="res://ART/Sprites/PHASE_Hand.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.0
height = 74.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 37.0
height = 136.0

[node name="ENE_DemonHand" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Collider" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="."]
modulate = Color( 0.14902, 0.862745, 0.258824, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 2 )

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2( 0, -50 )
shape = SubResource( 3 )

[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_Detector_body_exited"]
